lib/rust/language_pack_jp/tests/snapshots/r#mod__check_inflection_breakpoints-26.snap
---
source: lib/rust/language_pack_jp/tests/mod.rs
expression: result
---
- - 信じられない
  - true
