lib/rust/language_pack_jp/tests/snapshots/r#mod__check_inflection_breakpoints-3.snap
---
source: lib/rust/language_pack_jp/tests/mod.rs
expression: result
---
- - 駆け寄ってくる
  - true
