lib/rust/language_pack_jp/tests/snapshots/r#mod__check_inflection_breakpoints-6.snap
---
source: lib/rust/language_pack_jp/tests/mod.rs
expression: result
---
- - たとえ
  - false
- - 雨
  - false
- - が
  - false
- - 降って
  - true
- - も
  - false
- - 、
  - true
- - 外
  - false
- - に
  - false
- - 出よう。
  - true
