lib/rust/language_pack_jp/tests/snapshots/r#mod__check_inflection_breakpoints-7.snap
---
source: lib/rust/language_pack_jp/tests/mod.rs
expression: result
---
- - 雨
  - false
- - が
  - false
- - 降った
  - true
- - けれど
  - false
- - 、
  - true
- - 外
  - false
- - に
  - false
- - 出た。
  - true
