lib/rust/language_pack_jp/tests/snapshots/r#mod__check_regressions-11.snap
---
source: lib/rust/language_pack_jp/tests/mod.rs
expression: result
---
- - ある
  - ある
  - 16
